name:                ceilometer-common
version:             0.0.1
synopsis:            Common Haskell types and encoding for ceilometer
description:         Provides a set of common types for use with ceilometer related packages.
homepage:            https://github.com/anchor/ceilometer-common
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2015 Anchor Systems, Pty Ltd and Others
category:            Development
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:                git
  location:            git@github.com:anchor/ceilometer-common.git

library
  exposed-modules:     Ceilometer.Types
                       Ceilometer.Types.Base
                       Ceilometer.Types.IP
                       Ceilometer.Types.Volume
  --other-modules:
  -- other-extensions:    
  build-depends:       base >=4.7 && < 5,
                       marquise,
                       vaultaire-common,
                       roundtrip,
                       bimap,
                       unordered-containers,
                       text
  hs-source-dirs:      lib
  default-language:    Haskell2010
