name:                ceilometer-common
version:             0.0.1
synopsis:            Common Haskell types and encoding for ceilometer
description:         Provides a set of common types for use with ceilometer related packages.
homepage:            https://github.com/anchor/ceilometer-common
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2015 Anchor Systems, Pty Ltd and Others
category:            Development
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:                git
  location:            git@github.com:anchor/ceilometer-common.git

library
  exposed-modules:     Ceilometer.Types
                       Ceilometer.Fold
                       Ceilometer.Infer
                       Ceilometer.Client

  other-modules:       Ceilometer.Types.TH
                       Ceilometer.Types.Base
                       Ceilometer.Types.CPU
                       Ceilometer.Types.Volume
                       Ceilometer.Types.Instance
                       Control.PFold

  build-depends:       base >=4.7 && < 5
                     , lens
                     , binary
                     , containers
                     , foldl
                     , marquise
                     , vaultaire-common
                     , roundtrip
                     , bimap
                     , unordered-containers
                     , text
                     , bytestring
                     , siphash
                     , pipes
                     , mtl
                     , template-haskell

  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite parsing-printing
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests,lib
  main-is:             Prisms.hs
  other-modules:       Ceilometer.Types

  build-depends:       base >=4.7 && < 5
                     , lens
                     , mtl
                     , transformers
                     , bimap
                     , binary
                     , containers
                     , marquise
                     , QuickCheck
                     , hspec
                     , text
                     , bytestring
                     , siphash
                     , template-haskell

test-suite fold
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests,lib
  main-is:             Fold.hs
  other-modules:       Ceilometer.Types
                       Ceilometer.Fold

  build-depends:       base >=4.7 && < 5
                     , lens
                     , mtl
                     , transformers
                     , bimap
                     , binary
                     , containers
                     , marquise
                     , QuickCheck
                     , hspec
                     , text
                     , bytestring
                     , siphash
                     , template-haskell
                     , foldl
                     , pipes