name:                ceilometer-common
version:             0.1.0
synopsis:            Common Haskell types and encoding for ceilometer
description:         Provides a set of common types for use with ceilometer related packages.
homepage:            https://github.com/anchor/ceilometer-common
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2015 Anchor Systems, Pty Ltd and Others
category:            Development
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:                git
  location:            git@github.com:anchor/ceilometer-common.git

library
  exposed-modules:     Ceilometer.Types
                       Ceilometer.Fold
                       Ceilometer.Client
                       Ceilometer.Tags

  other-modules:       Ceilometer.Types.TH
                       Ceilometer.Types.Base
                       Ceilometer.Types.CPU
                       Ceilometer.Types.Volume
                       Ceilometer.Types.Image
                       Ceilometer.Types.Instance
                       Ceilometer.Types.Snapshot
                       Control.PFold

  build-depends:       base >=4.7 && < 5
                     , bimap
                     , binary
                     , bytestring
                     , containers
                     , foldl
                     , lens
                     , pipes
                     , siphash
                     , template-haskell
                     , text
                     , vaultaire-common >= 2.8.3

  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests,lib

  main-is:             Main.hs

  build-depends:       base >=4.7 && < 5
                     , QuickCheck
                     , bimap
                     , binary
                     , bytestring
                     , containers
                     , foldl
                     , hspec
                     , lens
                     , mtl
                     , pipes
                     , siphash
                     , template-haskell
                     , text
                     , transformers
                     , vaultaire-common >= 2.8.3
